--- a/platformio.ini
+++ b/platformio.ini
@@ -29,3 +29,6 @@ board = nodemcuv2
 framework = arduino
 src_filter = ${env.src_filter} -<sender.cpp>
 monitor_speed = 115200
+lib_deps = 
+	https://github.com/knolleary/pubsubclient.git
+	https://github.com/arduino-libraries/NTPClient.git
