--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ lib_deps =
 monitor_speed = 115200
 
 [env:receiver]
-platform = espressif8266
+platform = espressif8266@2.6.2
 board = nodemcuv2
 framework = arduino
 src_filter = ${env.src_filter} -<sender.cpp>
